--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@tanstack/react-query": "^5.20.1",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
