--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@tanstack/react-query": "^5.20.1",
+    "@tanstack/react-query-devtools": "^5.21.0",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.22.1",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.34",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
